tests/fixtures/invalid/struct_field_dim_mismatch.gcl
// error: field dim mismatch in struct construction
type Pair {
    Pair(a: Length, b: Velocity),
}

node bad: Pair = Pair(a: 1.0 kg, b: 100.0 m/s);
